[gd_scene load_steps=3 format=3 uid="uid://dkk3jfexd2d8t"]

[ext_resource type="Script" path="res://scripts/confirmation_prompt.gd" id="1_o5yw6"]
[ext_resource type="Script" path="res://scripts/button.gd" id="2_y83vq"]

[node name="ConfirmationPrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5yw6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -991.0
offset_top = -539.0
offset_right = 1056.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_right = 1963.0
offset_bottom = 1099.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 108
text = "Quit?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
offset_top = 504.0
offset_right = 1963.0
offset_bottom = 595.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1

[node name="YesBtn" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(180, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Yes
"
script = ExtResource("2_y83vq")

[node name="Spacer" type="Control" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="NoBtn" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(180, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "No
"
